# panel-gwalker

./: README.md  pyproject.toml  setup.py  tox.ini
panel_gwalker/: graphic_walker.py  graphic_walker.ts  package.json  pane.py  tsconfig.json
panel_gwalker/.github/workflows/: build.yaml  test.yaml
